-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.12.3
-
None
-
7f1fce7f6c8d10bc15c4529e40e08f786708f6b2 (qt/qtotaupdate/master)
-
2020wk18
The function
bool QOtaClient::isRepositoryConfigSet(QOtaRepositoryConfig *config) const
has a memory leak.
bool QOtaClient::isRepositoryConfigSet(QOtaRepositoryConfig *config) const { QOtaRepositoryConfig *currentConfig = repositoryConfig(); bool isSet = currentConfig && config && currentConfig->url() == config->url() && currentConfig->gpgVerify() == config->gpgVerify() && currentConfig->tlsPermissive() == config->tlsPermissive() && currentConfig->tlsClientCertPath() == config->tlsClientCertPath() && currentConfig->tlsClientKeyPath() == config->tlsClientKeyPath() && currentConfig->tlsCaPath() == config->tlsCaPath(); return isSet; }
currentConfig is not deleted when the function returns.