Fix memory leak

Fixes: QTBUG-83270
Change-Id: Iec28f7cbcfa0eccfdf25d96d80942e594a5c159f
Reviewed-by: Ville Voutilainen <ville.voutilainen@qt.io>